Rebuild the root API around SacredMod and registries